--- a/Tutorial/Tut_07_Streaming/01_Video_Streaming_Server_in_Nodejs/template/index.html
+++ b/Tutorial/Tut_07_Streaming/01_Video_Streaming_Server_in_Nodejs/template/index.html
@@ -17,7 +17,7 @@
     <video id="videoPlayer" width="650" controls autoplay>
       <source src="http://localhost:8080/video" type="video/mp4" />
     </video>
-    <button>Get Video</button>
+    <button onclick="getSongs()">Get Video</button>
     <script src="script.js"></script>
   </body>
 </html>
